// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should render on desktop 1`] = `
<React.Fragment>
  <Top
    open={false}
    toggleMobileNav={[Function]}
  />
  <div
    className="Aside"
  >
    <nav
      className="Navigation"
    >
      <div
        className="Wrapper"
      >
        <ul
          className="List"
        >
          <Item
            key="0"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
          <Item
            key="1"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
          <Item
            key="2"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
        </ul>
      </div>
    </nav>
  </div>
</React.Fragment>
`;

exports[`Navigation should render on mobile 1`] = `
<React.Fragment>
  <div
    className="Overlay"
    onClick={[Function]}
  />
  <Top
    open={false}
    toggleMobileNav={[Function]}
  />
  <div
    className="Aside mobile"
  >
    <nav
      className="Navigation mobile"
    >
      <div
        className="Wrapper"
      >
        <ul
          className="List mobile"
        >
          <Item
            key="0"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
          <Item
            key="1"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
          <Item
            key="2"
            location="/foo/bar"
            toggleMobileNav={[Function]}
          />
        </ul>
      </div>
    </nav>
  </div>
</React.Fragment>
`;

exports[`Navigation should render on mobile and open 1`] = `"Navigation mobile show"`;

exports[`Navigation should toggle menu when clicking overlay 1`] = `"Navigation mobile"`;
